--- a/MTK-INV/appsettings.json
+++ b/MTK-INV/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MtkInv-Con": "Data Source=MTK-OFFICE;Initial Catalog=MTK-Inv; Integrated Security=true"
+    "MtkInv-Con": "Data Source=.;Initial Catalog=MTK-Inv; Integrated Security=true"
   }
 }
